--- a/goit-js-hw-12/src/index.html
+++ b/goit-js-hw-12/src/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="container">
-    <input type="text" class="js-searchForm" />
+    <input type="text" class="searchForm js-searchForm" />
     <div class="country-list js-country-list"></div>
   </body>
 </html>
