--- a/goit-js-hw-13/src/index.html
+++ b/goit-js-hw-13/src/index.html
@@ -11,7 +11,7 @@
     <title>Home work 13</title>
   </head>
 
-  <body>
+  <body class="container">
     <form class="search-form" id="search-form">
       <input
         type="text"
@@ -21,13 +21,13 @@
       />
     </form>
 
-    <ul class="gallery container">
+    <ul class="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
 
     <button
       type="button"
-      class="load-more-btn js-btnLoadMore"
+      class="load-more-btn js-btnLoadMore is-hidden"
       data-action="load-more"
     >
       Load more
